[tool.poetry]
name = "cerina-protocol-foundry"
version = "0.1.0"
description = "Multi-agent CBT protocol generation system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.38.0"
langgraph = "^1.0.5"
pydantic = "^2.6.0"
mcp = "^1.24.0" 
langgraph-checkpoint-sqlite = "^3.0.1"
langchain-openai = "^1.1.3"
langchain-ollama = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
